Section 3 : Forward NN

--- a/Section2/XOR.ipynb
+++ b/Section2/XOR.ipynb
@@ -169,10 +169,10 @@
    ],
    "source": [
     "# We can pass these tests by multi-layered perceptron.\n",
-    "Test_Operator(Xor_MultiLayer,0,0,0)\n",
-    "Test_Operator(Xor_MultiLayer,0,1,1)\n",
-    "Test_Operator(Xor_MultiLayer,1,0,1)\n",
-    "Test_Operator(Xor_MultiLayer,1,1,0)"
+    "Test_Operator(Xor_MultiLayered,0,0,0)\n",
+    "Test_Operator(Xor_MultiLayered,0,1,1)\n",
+    "Test_Operator(Xor_MultiLayered,1,0,1)\n",
+    "Test_Operator(Xor_MultiLayered,1,1,0)"
    ]
   }
  ],
